--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,20 @@ dependencies:
   percent_indicator: ^4.0.0
   http: ^0.13.3
   shared_preferences: ^2.0.8
-
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.9.2
   
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/icon_mpa_ai.png"
+  adaptive_icon_background: "#0C39CC"
+  adaptive_icon_foreground: "dev_assets/icon_mpa_ai.png"
 
 flutter:
   uses-material-design: true
